<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_menu_camera"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/nav_gallery"
            android:icon="@drawable/ic_menu_gallery"
            android:title="@string/menu_gallery" />
        <item
            android:id="@+id/nav_slideshow"
            android:icon="@drawable/ic_menu_slideshow"
            android:title="@string/menu_slideshow" />
        <item
            android:id="@+id/nav_calculateFragment"
            android:icon="@drawable/ic_calculate"
            android:title="@string/calculator" />
        <item
            android:id="@+id/nav_webViewFragment"
            android:icon="@drawable/ic_web"
            android:title="@string/webView" />
        <item
            android:id="@+id/nav_playMusic"
            android:icon="@drawable/ic_music"
            android:title="@string/music" />
        <item
            android:id="@+id/nav_dictophone"
            android:icon="@drawable/ic_dictophone"
            android:title="@string/dictophone" />
        <item
            android:id="@+id/nav_apparat"
            android:icon="@drawable/ic_baseline_mobile_friendly_24"
            android:title="@string/apparat" />
        <item
            android:id="@+id/nav_camera"
            android:icon="@drawable/ic_menu_camera"
            android:title="@string/camera" />
        <item
            android:id="@+id/nav_history"
            android:icon="@drawable/ic_menu_gallery"
            android:title="@string/stories" />
        <item
            android:id="@+id/nav_add"
            android:icon="@drawable/ic_menu_gallery"
            android:title="@string/addstory" />
        <item
            android:id="@+id/nav_maps"
            android:icon="@drawable/ic_map"
            android:title="@string/map" />
    </group>
</menu>