<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.mirea.chubuka_v_a.mireaapp_android.ui.home.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/nav_gallery"
        android:name="com.mirea.chubuka_v_a.mireaapp_android.ui.gallery.GalleryFragment"
        android:label="@string/menu_gallery"
        tools:layout="@layout/fragment_gallery" />

    <fragment
        android:id="@+id/nav_slideshow"
        android:name="com.mirea.chubuka_v_a.mireaapp_android.ui.slideshow.SlideshowFragment"
        android:label="@string/menu_slideshow"
        tools:layout="@layout/fragment_slideshow" />
    <fragment
        android:id="@+id/nav_calculateFragment"
        android:name="com.mirea.chubuka_v_a.mireaapp_android.CalculateFragment"
        android:label="fragment_calculate"
        tools:layout="@layout/fragment_calculate" />
    <fragment
        android:id="@+id/nav_webViewFragment"
        android:name="com.mirea.chubuka_v_a.mireaapp_android.WebViewFragment"
        android:label="fragment_web_view"
        tools:layout="@layout/fragment_web_view" />
    <fragment
        android:id="@+id/nav_playMusic"
        android:name="com.mirea.chubuka_v_a.mireaapp_android.MusicFragment"
        android:label="fragment_play_music"
        tools:layout="@layout/fragment_music" />
    <fragment
        android:id="@+id/nav_apparat"
        android:name="com.mirea.chubuka_v_a.mireaapp_android.ApparatFragment"
        android:label="fragment_apparat"
        tools:layout="@layout/fragment_apparat" />
    <fragment
        android:id="@+id/nav_camera"
        android:name="com.mirea.chubuka_v_a.mireaapp_android.CameraFragment"
        android:label="fragment_camera"
        tools:layout="@layout/fragment_camera" />
    <fragment
        android:id="@+id/nav_history"
        android:name="com.mirea.chubuka_v_a.mireaapp_android.ui.History.HistoryFragment"
        android:label="fragment_history"
        tools:layout="@layout/fragment_history" />
    <fragment
        android:id="@+id/nav_add"
        android:name="com.mirea.chubuka_v_a.mireaapp_android.ui.History.AddHistoryFragment"
        android:label="fragment_add_history"
        tools:layout="@layout/fragment_add_history" />
    <fragment
        android:id="@+id/nav_maps"
        android:name="com.mirea.chubuka_v_a.mireaapp_android.MapsFragment"
        android:label="fragment_maps"
        tools:layout="@layout/fragment_maps" />
</navigation>